fixing jumping component, changed home background

--- a/client/src/Pages/Home/HomePage.css
+++ b/client/src/Pages/Home/HomePage.css
@@ -23,8 +23,8 @@ body {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  /* background-color: #ff9f00; */
-  background-image: url(../../images/SAboards/saboards-wide2.jpg);
+  background-color: #ff9f00;
+  /* background-image: url(../../images/SAboards/saboards-wide2.jpg); */
   background-size: cover;
   opacity: 0.6;
   border-top-style: double;
